# Sniffles

./: CMakeLists.txt  LICENSE  README.md
src/: Alignment.cpp  Alignment.h  BamParser.cpp  BamParser.h  CMakeLists.txt  Paramer.h  Sniffles.cpp  Translocator.cpp
src/print/: IPrinter.cpp  IPrinter.h
src/sub/: Breakpoint.cpp  Breakpoint.h  Detect_Breakpoints.cpp  Detect_Breakpoints.h  Realign.cpp  Realign.h
